--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ data/DoctrineORMModule/cache/
 # Legacy ZF1
 demos/
 extras/documentation
+ 
+database/string.config(html.h1/document.function)
+ 
+
+
+
+
+
+
+ 
+ 
